<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/settings_title">

    <!--<EditTextPreference
        android:defaultValue="@string/settings_min_magnitude_default"
        android:inputType="numberDecimal"
        android:key="@string/settings_min_magnitude_key"
        android:selectAllOnFocus="true"
        android:title="@string/settings_min_magnitude_label" />-->

    <ListPreference
        android:defaultValue="@string/settings_order_by_default"
        android:entries="@array/settings_order_by_labels"
        android:entryValues="@array/settings_order_by_values"
        android:key="@string/settings_order_by_key"
        android:title="@string/settings_order_by_label" />

    <ListPreference
        android:defaultValue="@string/settings_page_default"
        android:entries="@array/settings_page_labels"
        android:entryValues="@array/settings_page_values"
        android:key="@string/settings_page_key"
        android:title="@string/settings_page_label" />

    <ListPreference
        android:defaultValue="@string/settings_from_date_default"
        android:entries="@array/settings_from_date_labels"
        android:entryValues="@array/settings_from_date_values"
        android:key="@string/settings_from_date_key"
        android:title="@string/settings_from_date_label" />

</PreferenceScreen>